added timeoutable as a feature of the user login mode - added setting that logs them out in 30 minutes of inactivity (this is in devise.rb) + added host checkbox to the user sign up form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,9 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :host,
+                required: false,
+                as: :boolean, checked_value: true, unchecked_value: false %>
   </div>
 
   <div class="form-actions">
