added validation of first name and last name at sign up and everything else on update

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,9 +15,8 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :host,
-                required: false,
-                as: :boolean, checked_value: true, unchecked_value: false %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
   </div>
 
   <div class="form-actions">
