--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,8 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "banner";
+@import "cards";
+@import "map";
+@import "footer";
+@import "containers";
