navbar - stopped it from scrolling with content & stretched the banner all the way across viewport with 100 vw

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,7 @@
   display: flex;
   background-size: cover;
   background-position: center;
-  width: 1300px;
+  width: 100vw;
   height: 720px;
 }
 
