--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,7 @@
 .navbar-lewagon {
+  position: absolute;
+  width: 100vw;
+  padding: 20px 40px;
   justify-content: space-between;
   background: transparent;
 }
