--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,13 +26,13 @@
           </div>
         </li>
       <% else %>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <%= link_to "Sign-up", new_user_registration_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <%= link_to "Host", new_user_registration_path, class: "nav-link btn btn-outline-primary" %>
         </li>
       <% end %>
