adding simple mvc for all models

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path "astronomy" %>);">
   <div class="container search-container">
     Search form
+    <%= link_to "Search", campsites_path, class: 'btn btn-primary' %>
   </div>
   <div class="container text-container">
     <h1>Camping experience made simple</h1>
