added authentication on creating and editing campsites, on anything to do with bookings & removed the nesting of campsite within users - the user with whom to associate a campsite is now current_user - no current user, no new campsite && changed all links in simple views to reflect this fact - i.e. from new_user_campsite_path(user) to new_campsite_path

--- a/app/views/campsites/show.html.erb
+++ b/app/views/campsites/show.html.erb
@@ -1,6 +1,6 @@
 <div class="top-bar-below-nav">
   <%= @campsite.title %>
-  <%= link_to "edit", edit_user_campsite_path(current_user), class: 'btn btn-outline-primary' %>
+  <%= link_to "edit", edit_campsite_path, class: 'btn btn-outline-primary' %>
   <%= link_to "Back to results", campsites_path %>
   <%= link_to "Book", new_campsite_booking_path(@campsite), class: 'btn btn-primary' %>
 </div>
