--- a/app/views/campsites/new.html.erb
+++ b/app/views/campsites/new.html.erb
@@ -1,5 +1,5 @@
 <div class="top-bar-below-nav">
-  <%= simple_form_for [@user, @campsite] do |f| %>
+  <%= simple_form_for @campsite do |f| %>
     <%= f.input :title %>
     <%= f.input :description %>
     <%= f.input :price_per_night %>
