--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "My bookings", "#", class: "nav-link" %>
         </li>
         <li class="nav-item mx-2">
-          <%= link_to "New Campsite", new_user_campsite_path(current_user), class: "nav-link" %>
+          <%= link_to "New Campsite", new_campsite_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown mx-2">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
