--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="top-bar-below-nav">
+<div class="container">
   <h1><%= @campsite.title %></h1>
   <h2><%= current_user.first_name %></h2>
   <%= simple_form_for [@campsite, @booking] do |f| %>
