--- a/app/views/campsites/show.html.erb
+++ b/app/views/campsites/show.html.erb
@@ -1,4 +1,4 @@
-<div class="top-bar-below-nav">
+<div class="container">
   <%= @campsite.title %>
   <%= link_to "edit", edit_user_campsite_path(current_user), class: 'btn btn-outline-primary' %>
   <%= link_to "Back to results", campsites_path %>
