--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,6 +1,8 @@
-<%= simple_form_for :query, url: campsites_path, method: :get do |f| %>
-  <%= f.input :location %>
-  <%= f.input :start_date, as: :date %>
-  <%= f.input :end_date, as: :date %>
-  <%= f.button :submit, class: "btn-primary" %>
-<% end %>
+<div class="top-bar-below-nav">
+  <%= simple_form_for :query, url: campsites_path, method: :get do |f| %>
+    <%= f.input :location %>
+    <%= f.input :start_date, as: :date %>
+    <%= f.input :end_date, as: :date %>
+    <%= f.button :submit, class: "btn-primary" %>
+  <% end %>
+</div>
