--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <%= render 'shared/navbar' %>
     <p class="notice m-0"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div style="margin-bottom: 0px; <% unless current_page?('/') %>margin-top: 40px; <% end %>">
+      <%= yield %>
+    </div>
     <%= render 'shared/footer' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
