--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="navbar fixed-top navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon" <% if current_page?('/') %> style="background-color: transparent; position: absolute;" <% end %>>
+  <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "Logo" %>
     <% end %>
 
