--- a/app/views/campsites/new.html.erb
+++ b/app/views/campsites/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>New Campsite</h2>
-  <%= simple_form_for [@user, @campsite] do |f| %>
+  <%= simple_form_for @campsite do |f| %>
     <%= f.input :title %>
     <%= f.input :description %>
     <%= f.input :price_per_night %>
