--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,9 +21,10 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+      <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
+  <div class="m-3">
+    <p>Already have an Airbnb account? | <%= render "devise/shared/links" %></p>
+  </div>
 </div>
