--- a/app/views/campsites/new.html.erb
+++ b/app/views/campsites/new.html.erb
@@ -5,6 +5,8 @@
     <%= f.input :description %>
     <%= f.input :price_per_night %>
     <%= f.input :address %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.button :submit, class: "btn-primary" %>
   <% end %>
 </div>
