change airbnb to campster

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,6 +25,6 @@
     </div>
   <% end %>
   <div class="m-3">
-    <p>Already have an Airbnb account? | <%= render "devise/shared/links" %></p>
+    <p>Already have an Campster account? | <%= render "devise/shared/links" %></p>
   </div>
 </div>
