--- a/app/views/campsites/show.html.erb
+++ b/app/views/campsites/show.html.erb
@@ -1,5 +1,37 @@
 <div class="container">
-  <%= @campsite.title %>
+  <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-interval="2000">
+        <%= image_tag "astronomy", class: "d-block w-100" %>
+      </div>
+      <div class="carousel-item" data-interval="2000">
+        <%= image_tag "astronomy", class: "d-block w-100" %>
+      </div>
+      <div class="carousel-item" data-interval="2000">
+        <%= image_tag "astronomy", class: "d-block w-100" %>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <h1><%= @campsite.title %></h1>
+  <div class="campsite-info d-flex mt-3">
+    <div class="host-details d-flex align-items-center">
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar mr-3" %>
+        <p class="username m-0"><%= @campsite.user.first_name %></p>
+    </div>
+  </div>
   <%= link_to "edit", edit_campsite_path, class: 'btn btn-outline-primary' %>
   <%= link_to "Back to results", campsites_path %>
   <%= link_to "Book", new_campsite_booking_path(@campsite), class: 'btn btn-primary' %>
