--- a/app/views/campsites/show.html.erb
+++ b/app/views/campsites/show.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+<div class="container mt-0">
+  <div id="campsiteCarousel" class="carousel slide" data-ride="carousel" style="width: 800px; margin: 0 auto">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#campsiteCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#campsiteCarousel" data-slide-to="1"></li>
+      <li data-target="#campsiteCarousel" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active" data-interval="2000">
@@ -16,11 +16,11 @@
         <%= image_tag "astronomy", class: "d-block w-100" %>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#campsiteCarousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#campsiteCarousel" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
