--- a/app/views/campsites/index.html.erb
+++ b/app/views/campsites/index.html.erb
@@ -9,7 +9,13 @@
       </div>
     </div>
     <div class="right-container" style="width: 40%">
-      <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1IjoiY2dlb2Zmcm95IiwiYSI6ImNqeXUzeGhuZDBhM3EzbW40dmxob29qa3MifQ.wDBmcmH5GsEmht6hRiop2g'>
+      <div
+        id="map"
+        style="width: 100%;
+        height: 600px;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+      ></div>
     </div>
   </div>
 </div>
