--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,13 @@
 <div class="">
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path "astronomy" %>);">
     <div class="container search-container">
-      Search form
-      <%= link_to "Search", campsites_path, class: 'btn btn-primary' %>
+      <%= simple_form_for :query, url: campsites_path, method: :get do |f| %>
+          <%= f.input :address, input_html: { id: "campsite-address" } %>
+          <%= f.input :start_date, as: :string, input_html: {type: :date} %>
+          <%= f.input :end_date, as: :string, input_html: {type: :date} %>
+          <%= f.input :guests, as: :integer %>
+          <%= f.button :submit, class: "btn-primary" %>
+      <% end %>
     </div>
     <div class="container text-container">
       <h1>Camping experience made simple</h1>
