added simple algolia places to new + search by location works on index

--- a/app/views/campsites/new.html.erb
+++ b/app/views/campsites/new.html.erb
@@ -4,7 +4,7 @@
     <%= f.input :title %>
     <%= f.input :description %>
     <%= f.input :price_per_night %>
-    <%= f.input :address %>
+    <%= f.input :address, input_html: { id: "campsite-address" } %>
     <%= f.input :photo %>
     <%= f.input :photo_cache, as: :hidden %>
     <%= f.button :submit, class: "btn-primary" %>
