picture updated on cards and seed amended to create 3 users and add pictures

--- a/app/views/shared/_campsite_card.html.erb
+++ b/app/views/shared/_campsite_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card-trip">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+  <%= cl_image_tag campsite.photo %>
   <div class="card-trip-infos">
     <div>
       <%= link_to campsite_path(campsite) do %>
