fixed styling on the homepage form

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -34,8 +34,8 @@
 .search-container {
 
   background-color: white;
-  width: 400px;
-  height: 300px;
+  width: 1000px;
+  height: 60%;
   margin-top: 150px;
   margin-left: 100px;
 }
