changes to the cards and map cards

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -38,6 +38,13 @@
   width: 40px;
 }
 
+.card-trip-infos .card-trip-pricing {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  width: 40px;
+}
+
 // scss for products on home page
 
 .card-category {
