--- a/app/views/campsites/index.html.erb
+++ b/app/views/campsites/index.html.erb
@@ -11,7 +11,7 @@
     <div class="right-container" >
       <div
         id="map"
-        style="width: 100%;
+        style="width: 350px;
         height: 600px;"
         data-markers="<%= @markers.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
