fixed seed file & added first image of carousel to be the correct image

--- a/app/views/campsites/_carousel.html.erb
+++ b/app/views/campsites/_carousel.html.erb
@@ -6,7 +6,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active" data-interval="2000">
-       <%= image_tag "astronomy", class: "d-block w-100" %>
+       <%= cl_image_tag(campsite.photo, width: 800, height: 450) %>
     </div>
     <div class="carousel-item" data-interval="2000">
       <%= image_tag "astronomy", class: "d-block w-100" %>
