--- a/app/views/campsites/show.html.erb
+++ b/app/views/campsites/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-0 mb-3">
-  <%= render 'carousel' %>
+  <%= render 'carousel', campsite: @campsite %>
   <div class="d-flex align-items-top my-5">
     <%= render 'key_details', campsite: @campsite %>
     <%= render 'booking_or_owner_form', campsite: @campsite %>
