--- a/app/assets/stylesheets/components/_custom.scss
+++ b/app/assets/stylesheets/components/_custom.scss
@@ -1,3 +1,26 @@
+body, html {
+
+   width: 100%;
+   height: 100%;
+   margin: 0px;
+   padding: 0px;
+   overflow-x: hidden;
+}
+
+// html {
+//   position: relative;
+//   min-height: 100%;
+// }
+
+// body {
+//   margin: 0 0 80px;
+//   /* bottom = footer height */
+//   padding: 0px;
+// }
+.general-container {
+  min-height: 90vh;
+}
+
 .btn-primary {
   color: #fff;
 }
