--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,7 @@
   height: 75px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  position: absolute;
+  // position: absolute;
   left: 0;
   bottom: 0;
   height: 80px;
