added anchor on reviews h2 and pressing on stars at the top will go there

--- a/app/assets/stylesheets/pages/_campsite_show.scss
+++ b/app/assets/stylesheets/pages/_campsite_show.scss
@@ -8,3 +8,23 @@
     margin-bottom: 16px;
   }
 }
+
+.key-details {
+  a {
+    color: inherit;
+  }
+
+  i {
+    color: $primary;
+    font-size: 0.8em;
+    margin-left: 5px;
+  }
+}
+
+#review-achor {
+  color: inherit;
+}
+
+#review-achor:hover {
+  color: inherit;
+}
