--- a/app/views/campsites/show.html.erb
+++ b/app/views/campsites/show.html.erb
@@ -10,7 +10,9 @@
       <%= render 'flat_details' %>
     </div>
       <div class="reviews pt-3">
-        <h2>Reviews</h2>
+        <a name="reviews" id="review-anchor">
+          <h2>Reviews</h2>
+        </a>
         <%= render 'review' %>
       </div>
   </div>
