--- a/app/views/campsites/_key_details.html.erb
+++ b/app/views/campsites/_key_details.html.erb
@@ -1,8 +1,19 @@
-<div class="mx-3">
+<div class="key-details mx-3">
   <div>
     <%= link_to "Back to results", campsites_path %>
     <h1><%= campsite.title %></h1>
-    <p><%= campsite.address %></p>
+    <div class="d-flex align-items-center justify-content-between">
+      <p><%= campsite.address %></p>
+      <div class="d-flex align-items-center">
+        <a href="#reviews">
+          <p class="m-0">4.7</p>
+        </a>
+        <a href="#reviews">
+          <%= icon('fas', 'star') %>
+        </a>
+      </div>
+    </div>
+
     <div class="campsite-info d-flex my-3">
       <div class="host-details d-flex align-items-center">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar mr-3" %>
