--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,20 @@
 // Specific CSS for your home-page
 form {
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
+}
+
+form fieldset {
+  text-align: left;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.home-search {
+  width: 80%;
+  margin: auto;
+
+  #query_date-field {
+    width: 90%;
+  }
 }
