added some padding

--- a/app/views/pages/partials/_home_search.html.erb
+++ b/app/views/pages/partials/_home_search.html.erb
@@ -3,10 +3,8 @@
     <legend><h1>Camping experience made simple</h1></legend>
   </fieldset>
   <div class="d-flex home-search">
-
     <input name="query[campsite-address]" id="query_campsite-address" type="text" placeholder="Where do you want to go?"/>
-    <input class="mx-2" name="query[date-field]" id="query_date-field" type="text" placeholder="When?"/>
-    <%=  %>
+    <input class="mx-2 px-3" name="query[date-field]" id="query_date-field" type="text" placeholder="When?"/>
     <button class="btn btn-primary" type="submit">SEARCH</button>
   </div>
 <% end %>
