--- a/app/views/pages/partials/_home_search.html.erb
+++ b/app/views/pages/partials/_home_search.html.erb
@@ -1,6 +1,9 @@
 <%= simple_form_for :query, url: campsites_path, method: :get do |f| %>
   <fieldset>
-    <legend><h1>Camping experience made simple</h1></legend>
+    <legend>
+      <h1>Camping experience made simple</h1>
+      <h2 class="ml-0">Camp on private lands and access unique and safe new places</h2>
+    </legend>
   </fieldset>
   <div class="d-flex home-search">
     <input name="query[campsite-address]" id="query_campsite-address" type="text" placeholder="Where do you want to go?"/>
