--- a/app/views/pages/partials/_home_search.html.erb
+++ b/app/views/pages/partials/_home_search.html.erb
@@ -2,7 +2,7 @@
   <fieldset>
     <legend>
       <h1>Camping experience made simple</h1>
-      <h2 class="ml-0">Camp on private lands and access unique and safe new places</h2>
+      <h2 class="ml-0 mb-4">Camp on private lands and access unique and safe new places</h2>
     </legend>
   </fieldset>
   <div class="d-flex home-search">
