--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,6 +4,10 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
+.card-trip:hover {
+  opacity: 0.7;
+}
+
 .card-trip > img {
   height: 200px;
   width: 100%;
@@ -29,13 +33,6 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
-}
-
-.card-trip-infos .card-trip-user {
-  position: absolute;
-  right: 16px;
-  top: -20px;
-  width: 40px;
 }
 
 .card-trip-infos .card-trip-pricing {
