added modal functionality - can have multiple modal buttons on one page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
         </li>
         <li>
           <!-- Trigger/Open The Modal -->
-          <button id="myBtn" class="nav-link btn btn-outline-primary">Host</button>
+          <button id="myModal" class="nav-link btn btn-outline-primary modalBtn">Host</button>
           <!-- The Modal -->
           <div id="myModal" class="modal">
             <!-- Modal content -->
