--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
           <!-- Trigger/Open The Modal -->
           <button id="myModal" class="nav-link btn btn-outline-primary modalBtn">Host</button>
           <!-- The Modal -->
-          <div id="myModal" class="modal">
+          <div name="myModal" class="modal">
             <!-- Modal content -->
             <div class="modal-content">
               <span class="close">&times;</span>
