--- a/app/views/campsites/_review.html.erb
+++ b/app/views/campsites/_review.html.erb
@@ -1,8 +1,26 @@
-<div class="review my-5">
-  <h3>Shit garden, no toilet</h3>
-  <div class="d-flex align-items-center">
-    <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar mr-3" %>
-    <p class="m-0">Reviewer Name</p>
+<% @campsite.reviews.each do |review| %>
+  <div class="reviews">
+    <div class="row blockquote review-item">
+      <div class="col-md-2 text-center">
+        <img class="rounded-circle reviewer" src="https://kitt.lewagon.com/placeholder/users/ssaunier" width="100">
+        <div class="caption">
+          <small>Joe</small>
+        </div>
+
+      </div>
+      <div class="col-md-10">
+        <h4><%= review.title %></h4>
+        <%= review.rating.to_i.times do %>
+          <i class="fa fa-star"></i>
+        <% end %>
+        <div class="ratebox text-center" data-id="0" data-rating=""></div>
+        <p class="review-text"><%= review.content %></p>
+        <small class="review-date"><%= review.created_at.strftime("%d-%m-%Y")
+ %></small>
+      </div>
+    </div>
   </div>
-  <p>Nice welcome The are warm couple and flowers lover. Very thoughtful people, we had everything we need it . You can see they had a lot of expepeience hosting people over the years . Sunny room with a view of the garden. Very good with direction to the House</p>
-</div>
+<% end %>
+
+
+
