--- a/app/views/campsites/_review.html.erb
+++ b/app/views/campsites/_review.html.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="col-md-10">
         <h4><%= review.title %></h4>
-        <%= review.rating.to_i.times do %>
+        <% review.rating.to_i.times do %>
           <i class="fa fa-star"></i>
         <% end %>
         <div class="ratebox text-center" data-id="0" data-rating=""></div>
