--- a/app/assets/stylesheets/components/_custom.scss
+++ b/app/assets/stylesheets/components/_custom.scss
@@ -1,12 +1,10 @@
 body, html {
-
    width: 100%;
-   height: 100%;
+   min-height: 100vh;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
 }
-
 // html {
 //   position: relative;
 //   min-height: 100%;
@@ -21,6 +19,9 @@ body, html {
   min-height: 90vh;
 }
 
+.container{
+  min-height: 90vh;
+}
 .btn-primary {
   color: #fff;
 }
@@ -31,4 +32,8 @@ body, html {
 
 .right-container {
   width: 40%;
+}
+
+.white-space {
+  margin-top: 40px;
 }
