--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,28 +1,46 @@
 <div class="container" style="  justify-content: space-between;">
-  <h2 style="text-align: center;">My Bookings</h2>
+  <h2 style="text-align: center;">
+    <% if @bookings.any? %>
+      My Bookings
+    <% else %>
+      Start Booking
+    <% end %>
+  </h2>
   <div class="container" style="display: flex; justify-content: space-evenly;">
-    <div class="left-container" style="justify-content: space-between;">
+    <% if @bookings.any? %>
       <div class="cards">
+        <% @bookings.each do |booking| %>
+          <!-- <li>
+            <%= booking.id %> - <%= link_to booking.campsite.title ,booking_path(booking) %> <%= link_to "Leave a Review", new_booking_review_path(booking) %>
+          </li> -->
+          <div class="with_review">
 
-          <% @bookings.each do |booking| %>
-            <!-- <li>
-              <%= booking.id %> - <%= link_to booking.campsite.title ,booking_path(booking) %> <%= link_to "Leave a Review", new_booking_review_path(booking) %>
-            </li> -->
-
-          <%= render 'shared/campsite_card', campsite: booking.campsite %>
-
-          <% end %>
-
+            <%= render 'shared/campsite_card', campsite: booking.campsite %>
+            <br>
+              <button id="LeaveReview" class="nav-link btn btn-outline-primary modalBtn mr-3 btn-block">Leave Review</button>
+            <!-- The Modal -->
+            <div name="LeaveReview" class="modal">
+                <!-- Modal content -->
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <%= render 'reviews/new', booking: booking, review: Review.new %>
+                </div>
+              </div>
+            </div>
+        <% end %>
       </div>
-    </div>
-    <div class="right-container" >
-      <div
-        id="map"
-        style="width: 350px;
-        height: 600px;"
-        data-markers="<%= @markers.to_json %>"
-        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-      ></div>
+      <% else %>
+      <div class="left-container" style="margin-top: 80px">
+        <p>There was never a better time for camping...</p>
+
+        <a href="../../campsites/" class="btn btn-outline-primary mr-3">Find my next campsite</a>
+      </div>
+      <div class="right-container" style="margin-top: 60px">
+        <%= image_tag("campfire.png", width: "600") %>
+      </div>
+
+      <% end %>
+
   </div>
 </div>
 
