adding to owner view of a campsite

--- a/app/views/campsites/show.html.erb
+++ b/app/views/campsites/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-0 mb-3">
   <%= render 'carousel', campsite: @campsite %>
-  <div class="d-flex align-items-top my-5">
+  <div class="d-flex align-items-top my-5 row">
     <%= render 'key_details', campsite: @campsite %>
     <%= render 'booking_or_owner_form', campsite: @campsite %>
   </div>
