--- a/app/views/campsites/_key_details.html.erb
+++ b/app/views/campsites/_key_details.html.erb
@@ -1,4 +1,4 @@
-<div class="key-details mx-3">
+<div class="key-details px-3 col-8">
   <div>
     <%= link_to "Back to results", campsites_path %>
     <h1><%= campsite.title %></h1>
