--- a/app/views/campsites/_booking_or_owner_form.html.erb
+++ b/app/views/campsites/_booking_or_owner_form.html.erb
@@ -10,7 +10,7 @@
     <div>
       <div class="d-flex mb-1">
         <%= link_to "Edit Campsite", edit_campsite_path(campsite), class: "btn btn-primary mr-1 w-100" %>
-        <%= link_to "Set as Unavailable", edit_campsite_path(campsite), class: "btn btn-outline-primary w-100" %>
+        <%= link_to "Set as Unavailable", new_campsite_unavailable_path(campsite), class: "btn btn-outline-primary w-100" %>
       </div>
       <%= link_to "Remove from Campster", campsite_path(campsite),
         method: :delete,
