--- a/app/views/campsites/_amenities.html.erb
+++ b/app/views/campsites/_amenities.html.erb
@@ -1,20 +1,20 @@
 <div class="amenities">
-  <h2>Amenities</h2>
+  <h3>Amenities</h3>
   <ul>
     <li>
-      Pet Friendly
+      <i class="fas fa-paw"></i> Pet Friendly
     </li>
     <li>
-      WiFi
+      <i class="fas fa-wifi"></i> WiFi
     </li>
     <li>
-      Showers
+      <i class="fas fa-shower"></i> Showers
     </li>
     <li>
-      Toilet
+      <i class="fas fa-toilet"></i> Toilet
     </li>
     <li>
-      Free Parking
+      <i class="fas fa-parking"></i> Free Parking
     </li>
   </ul>
 </div>
