--- a/app/views/campsites/_flat_details.html.erb
+++ b/app/views/campsites/_flat_details.html.erb
@@ -1,7 +1,9 @@
 <div class="flat-details">
-  <h2>Key Info</h2>
-  <p><strong>Max Guests</strong> 7</p>
-  <p><strong>Minimum Nights</strong> 5</p>
-  <p><strong>Check in:</strong> 3PM</p>
-  <p><strong>Check out:</strong> 11AM</p>
+  <h3>Key Info</h3>
+  <ul>
+  <li><i class="fas fa-users"></i> Max Guests: <strong>7</strong></li>
+  <li><i class="fas fa-moon"></i> Minimum Nights: <strong>5</strong></li>
+  <li><i class="fas fa-arrow-right"></i> Check in: <strong>3PM</strong></li>
+  <li><i class="fas fa-arrow-left"></i> Check out: <strong>11AM</strong></li>
+  </ul>
 </div>
