--- a/app/views/reviews/_new.html.erb
+++ b/app/views/reviews/_new.html.erb
@@ -1,5 +1,5 @@
-<div class="container" style="display: flex; justify-content: space-evenly;">
-  <div class="left-container">
+<div class="" style="">
+  <div class="">
   <%= simple_form_for [booking, review] do |f| %>
     <%= f.input :title %>
     <%= f.input :content %>
@@ -8,3 +8,4 @@
   <% end %>
   </div>
 </div>
+<br>
