--- a/app/views/shared/_campsite_card.html.erb
+++ b/app/views/shared/_campsite_card.html.erb
@@ -7,6 +7,8 @@
       <% end %>
       <p><%= campsite.description[0...50] %> ...</p>
     </div>
-    <h2 class="card-trip-pricing">£<%= campsite.price_per_night %></h2>
+    <div>
+      <h2 class="card-trip-pricing">£<%= campsite.price_per_night %></h2>
+    </div>
   </div>
 </div>
