--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -31,15 +31,15 @@
   padding: 16px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   position: relative;
 }
 
 .card-trip-infos .card-trip-pricing {
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
-  width: 40px;
+  // position: absolute;
+  // right: 10px;
+  // bottom: 10px;
+  // width: 40px;
 }
 
 // scss for products on home page
