replaced sebs photo with link to cloudinary

--- a/app/views/campsites/_key_details.html.erb
+++ b/app/views/campsites/_key_details.html.erb
@@ -16,7 +16,7 @@
 
     <div class="campsite-info d-flex my-3">
       <div class="host-details d-flex align-items-center">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar mr-3" %>
+          <%= image_tag "https://res.cloudinary.com/dqh0reqn3/image/upload/v1566572388/no_image_picture_ed0pbm.png", class: "avatar mr-3" %>
           <p class="m-0"><%= campsite.user.email %></p>
       </div>
     </div>
