--- a/app/views/campsites/_review.html.erb
+++ b/app/views/campsites/_review.html.erb
@@ -2,7 +2,7 @@
   <div class="reviews">
     <div class="row blockquote review-item">
       <div class="col-md-2 text-center">
-        <img class="rounded-circle reviewer" src="https://kitt.lewagon.com/placeholder/users/ssaunier" width="100">
+        <img class="rounded-circle reviewer" src="https://res.cloudinary.com/dqh0reqn3/image/upload/v1566572388/no_image_picture_ed0pbm.png" width="100">
         <div class="caption">
           <small>Joe</small>
         </div>
